Try to fix map modal button on mobile

--- a/style.css
+++ b/style.css
@@ -322,11 +322,14 @@ button:active {
     justify-self: center;
     align-content: center;
     align-self: center;
-    max-height: 90vw;
+    /* max-height: 90vw; */
+    max-height: 100%;
 }
 
 .mapback {
     width: 90%;
+    max-height: 90vh;
+    
 }
 
 .mapmarker {
@@ -423,7 +426,7 @@ button:active {
 }
 
 .closemodal {
-    position: absolute;
+    position: fixed;
     background-color: rgba(0, 0, 0, 0.647);
     backdrop-filter: blur(15px);
     align-self: center;
@@ -445,6 +448,7 @@ button:active {
     justify-self: center;
     border-left: 1px solid rgb(125, 125, 125);
     border-right: 1px solid rgb(125, 125, 125);
+    overflow: auto;
 }
 
 .invtitle{
